--- a/MusicShopWebApp/MusicShopWebApp/Properties/launchSettings.json
+++ b/MusicShopWebApp/MusicShopWebApp/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:53309",
-      "sslPort": 44386
+      "applicationUrl": "http://localhost:15094",
+      "sslPort": 44324
     }
   },
   "profiles": {
@@ -16,7 +16,7 @@
         "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation"
       }
     },
-    "MusicShop_WebApp": {
+    "MusicShopWebApp": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
